Closed Bug 393660 Opened 17 years ago Closed 17 years ago

When non-accessible node is removed/shown, fire events for accessible first-line descendants

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: surkov)

References

(Blocks 1 open bug)

Details

(Keywords: access)

Attachments

(2 files, 1 obsolete file)

For this case, when EVENT_SHOW is fired on the DOM node 

Accessible ancestor node:
    \
    DOM Node (not accessible)
    |            |                |
Accessible      Accessible      Accesssible

The 3 accessible descendants (which are accessible siblings but may not be DOM siblings) need the correct SHOW/HIDE events.
Severity: normal → major
I thought we fire events for ancestor node if the target node is not accessible.
Surkov, that's true for text change events.

But if the dom node in the description of this bug goes away, that means all 3 accessibles have become hidden. Wouldn't you expect hide events for those 3 accessibles? Or where would you expect the hide event to be fired? If it is fired on the ancestor that makes no sense, because the ancestor is still there.
Blocks: fox3access
Attached patch patch (obsolete) — Splinter Review
Attachment #282005 - Flags: review?(aaronleventhal)
This is not right:

  PRBool isHidden = aEventType == nsIAccessibleEvent::EVENT_ASYNCH_HIDE ||
                    aEventType == nsIAccessibleEvent::EVENT_ASYNCH_HIDE;

Misspelling (in both comments, variable names and method name)
s/descedants/descendants) 
Assignee: aaronleventhal → surkov.alexander
Comment on attachment 282005 [details] [diff] [review]
patch

Waiting for a new patch, but also I want to wait until we deal with our crashes in the invalidation handling code, before we go further and work on this.
Attachment #282005 - Flags: review?(aaronleventhal)
This fixes the invalid condition causing bug 394198 to happen.
Surkov, I hope you don't mind, but I needed to work on this myself to understand that it is fundamentally correct. I've attached a changed version of your original patch.
Attachment #283070 - Flags: review?(surkov.alexander)
Blocks: 398205
Comment on attachment 283070 [details] [diff] [review]
1) Remove aDescendant -- it can fire for the main node, if that's accessible. This is consistent with the logic, 2) Avoid O(n^2) operations when visibility becomes hidden for a subtree

looks fine
Attachment #283070 - Flags: review?(surkov.alexander)
Attachment #283070 - Flags: review+
Attachment #283070 - Flags: approval1.9?
Attachment #283070 - Flags: approval1.9? → approval1.9+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: